# asmodeus

./: CONTRIBUTING.md  Cargo.toml  README.md  dev.sh  install.sh  test_wrong.txt
.github/workflows/: rust.yml
asmachina/: Cargo.toml  README.md
asmachina/src/: debug.rs  error.rs  instructions.rs  lib.rs  machine.rs  types.rs
asmachina/src/instructions/: arithmetic.rs  control.rs  extended_arithmetics.rs  interrupts.rs  io.rs  memory.rs  mod.rs  stack.rs
asmachina/src/machine/: addressing.rs  execution.rs  interrupts.rs  io.rs  memory.rs  stack.rs
asmachina/tests/: integration_tests.rs  unit.rs
asmachina/tests/unit/: addressing_modes_tests.rs  error_tests.rs  extended_set_tests.rs  instruction_tests.rs  interrupt_tests.rs  io_tests.rs  machine_tests.rs  stack_tests.rs
asmodeus_assembler/: Cargo.toml
asmodeus_assembler/src/: lib.rs
asmodeus_assembler/tests/: assembler_tests.rs
asmodeus_core/: Cargo.toml
asmodeus_core/src/: lib.rs
asmodeus_core/tests/: integration_tests.rs
asmodeus_disassembler/: Cargo.toml
asmodeus_disassembler/src/: lib.rs
asmodeus_disassembler/tests/: disassembler_tests.rs
asmodeus_lexer/: Cargo.toml
asmodeus_lexer/src/: lib.rs
asmodeus_lexer/tests/: lexer_tests.rs
asmodeus_parser/: Cargo.toml
asmodeus_parser/src/: ast.rs  lib.rs
asmodeus_parser/tests/: parser_tests.rs
dismael/: Cargo.toml  README.md
dismael/src/: advanced_disassembler.rs  analyzer.rs  ascii_art.rs  core.rs  error.rs  formatter.rs  instruction.rs  lib.rs  types.rs
dismael/tests/: disassembler_tests.rs  integration_tests.rs  unit.rs
dismael/tests/unit/: advanced_disassembler_tests.rs  basic_disassembly_tests.rs  data_recognition_tests.rs  error_tests.rs  extented_set.rs  instruction_category_tests.rs  label_tests.rs  performance_tests.rs
examples/: README.md  addition.asmod  array.asmod  countdown.asmod  div.asmod  dod.asm  dollar.asmod  error_lexer.asmod  error_parser.asmod  factorial.asm  hello.asmod  macro.asm  max_element_array.asmod  mult_output.asmod  nnw.asmod  test.asmod
examples/advanced/: macro.asmod
examples/arithmetic/: div.asmod  dod.asmod  factorial.asmod  nnw.asmod
examples/arrays/: array.asmod  max_element_array.asmod
examples/basic/: countdown.asmod  hello.asmod
examples/errors/: error_assembler.asmod  error_lexer.asmod  error_parser.asmod  no_extended_error.asmod
examples/extended_set/: complex_calc.asmod  div.asmod  div_zero.asmod  mno.asmod  mod.asmod  no_extended_error.asmod
examples/formatter/: badly_formatted-formatted.asmod  badly_formatted.asmod
examples/io/: dollar.asmod  echo.asmod
hephasm/: Cargo.toml  README.md
hephasm/src/: ascii_art.rs  core.rs  directive.rs  error.rs  hephasm.rs  instruction.rs  lib.rs  macro_processor.rs  operand.rs  symbol_table.rs  types.rs
hephasm/src/operand/: address_resolver.rs  mod.rs  number_parser.rs  register_parser.rs  validator.rs
hephasm/src/passes/: first_pass.rs  mod.rs  second_pass.rs  third_pass.rs
hephasm/tests/: assembler_tests.rs  integration_tests.rs  unit.rs
hephasm/tests/unit/: addressing_tests.rs  directive_tests.rs  error_tests.rs  extended_set.rs  instruction_tests.rs  label_tests.rs  macro_tests.rs  number_format_tests.rs
installers/: dev.sh  install.sh
lexariel/: Cargo.toml  README.md
lexariel/src/: ascii_art.rs  error.rs  keywords.rs  lexer.rs  lib.rs  parsers.rs  position.rs  token.rs
lexariel/src/parsers/: comment.rs  identifier.rs  mod.rs  number.rs  whitespace.rs
lexariel/tests/: integration_tests.rs  lexer_tests.rs  unit.rs
lexariel/tests/unit/: basic_tokenization_tests.rs  comment_tests.rs  error_tests.rs  identifier_tests.rs  keyword_tests.rs  number_tests.rs  position_tests.rs  punctuation_tests.rs
parseid/: Cargo.toml  README.md
parseid/src/: ascii_art.rs  directive_parser.rs  error.rs  instruction_parser.rs  lib.rs  macro_parser.rs  operand_parser.rs  parser.rs  token_navigator.rs
parseid/src/ast/: addressing_mode.rs  directive.rs  instruction.rs  label.rs  macro_def.rs  mod.rs  operand.rs  program.rs
parseid/src/operand_parser/: direct_parser.rs  immediate_parser.rs  indirect_parser.rs  mod.rs  register_parser.rs  relative_parser.rs  validator.rs
parseid/tests/: integration_tests.rs  parser_tests.rs  unit.rs
parseid/tests/unit/: addressing_mode_tests.rs  basic_parsing_tests.rs  directive_tests.rs  error_tests.rs  instruction_tests.rs  label_tests.rs  macro_tests.rs  value_format_tests.rs
shared/: Cargo.toml
shared/src/: addressing.rs  instruction.rs  lib.rs  opcodes.rs
shared/tests/: extended_set.rs
src/: ascii_art.rs  assembler.rs  cli.rs  debug_utils.rs  debugger.rs  error.rs  examples_manager.rs  file_utils.rs  formatter.rs  main.rs  modes.rs  template_generator.rs
src/assembler/: assembly_pipeline.rs  disassembler.rs  interactive_runner.rs  mod.rs  program_runner.rs
src/bugseer/: address_parser.rs  command_handlers.rs  debugger_loop.rs  help.rs  mod.rs
src/cli/: args.rs  commands.rs  help.rs  mod.rs
src/debug/: ast.rs  machine_state.rs  mod.rs  program_banner.rs  program_output.rs  tokens.rs
src/formatter/: arrays.rs  comments.rs  core.rs  instructions.rs  labels.rs  mod.rs  tests.rs
templates/advanced/: macro.asmod
templates/arithmetic/: calc.asmod  factorial.asmod
templates/arrays/: array.asmod
templates/basic/: empty.asmod  hello.asmod
templates/extended/: extended-calc.asmod
templates/io/: echo.asmod
tests/: integration.rs  integration_tests.rs
tests/integration/: character_io_tests.rs  cli_tests.rs  complex_algorithm_tests.rs  debugger_tests.rs  error_handling_tests.rs  example_tests.rs  pipeline_tests.rs  roundtrip_tests.rs
