[workspace]
members = [
    "asmachina",
    "lexariel", 
    "parseid",
    "hephasm",
    "dismael",
    "shared",
]

[package]
name = "asmodeus"
version = "0.1.0"
edition = "2021"

[dependencies]
asmachina = { path = "asmachina" }
lexariel = { path = "lexariel" }
parseid = { path = "parseid" }
hephasm = { path = "hephasm" }
dismael = { path = "dismael" }
shared = { path = "shared" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[[bin]]
name = "asmodeus"
path = "src/main.rs"
